.k8s/overlays/prod/patch-deployment-project.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project
spec:
  template:
    spec:
      containers:
        - name: project
          image: w255mids.azurecr.io/garykong/project:b026820
          resources:
            requests:
              cpu: 800m
              memory: 1Gi
            limits:
              cpu: 1600m
              memory: 1Gi
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /health
              port: 8000
            initialDelaySeconds: 1
            periodSeconds: 3
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
