.k8s/overlays/prod/patch-deployment-project_copy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project
spec:
  template:
    spec:
      containers:
        - name: project
          image: [IMAGE_TAG]
          resources:
            requests:
              cpu: 400m
              memory: 1Gi
            limits:
              cpu: 1000m
              memory: 1Gi
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /health
              port: 8000
            initialDelaySeconds: 1
            periodSeconds: 3
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
