.k8s/overlays/prod/patch-deployment-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  template:
    spec:
      containers:
        - name: redis
          resources:
            requests:
              cpu: 400m
              memory: 500Mi
